# de-week-9-ObaloluwaAdeleke-SmartQnA

./: .gitignore  README.md  main.py  pyproject.toml
.cache/: llm_cache.json
smart_qa/: client.py  custom_exceptions.py
tests/: conftest.py  test_client.py
tests/data/: sample.txt
